add english version

--- a/package.json
+++ b/package.json
@@ -23,10 +23,15 @@
     "gatsby-source-filesystem": "^2.3.0",
     "gatsby-source-strapi": "0.0.12",
     "gatsby-transformer-sharp": "^2.5.0",
+    "i18next": "^19.5.4",
+    "i18next-browser-languagedetector": "^5.0.0",
+    "i18next-xhr-backend": "^3.2.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
+    "react-i18next": "^11.7.0",
     "react-icons": "^3.10.0",
+    "react-intl": "^5.0.2",
     "react-markdown": "^4.3.1"
   },
   "devDependencies": {
