--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "dependencies": {
     "gatsby": "^2.21.0",
-    "gatsby-image": "^2.4.0",
+    "gatsby-image": "^2.4.13",
+    "gatsby-plugin-netlify-cms": "^4.3.11",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^3.3.1",
     "gatsby-plugin-sharp": "^2.6.0",
@@ -26,13 +27,16 @@
     "i18next": "^19.5.4",
     "i18next-browser-languagedetector": "^5.0.0",
     "i18next-xhr-backend": "^3.2.2",
+    "netlify-cms-app": "^2.12.18",
     "react": "^16.12.0",
+    "react-bootstrap-carousel": "^4.0.6",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
     "react-i18next": "^11.7.0",
     "react-icons": "^3.10.0",
     "react-intl": "^5.0.2",
-    "react-markdown": "^4.3.1"
+    "react-markdown": "^4.3.1",
+    "react-slick": "^0.26.1"
   },
   "devDependencies": {
     "prettier": "2.0.5"
