--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-sitemap": "^2.4.2",
     "gatsby-source-filesystem": "^2.3.0",
     "gatsby-source-strapi": "0.0.12",
+    "gatsby-transformer-remark": "^2.8.25",
     "gatsby-transformer-sharp": "^2.5.0",
     "i18next": "^19.5.4",
     "i18next-browser-languagedetector": "^5.0.0",
