--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-icons": "^3.10.0",
     "react-intl": "^5.0.2",
     "react-markdown": "^4.3.1",
+    "react-responsive-carousel": "^3.2.9",
     "react-slick": "^0.26.1"
   },
   "devDependencies": {
