finish cms adding event

--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-intl": "^5.0.2",
     "react-markdown": "^4.3.1",
     "react-responsive-carousel": "^3.2.9",
-    "react-slick": "^0.26.1"
+    "react-slick": "^0.26.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "prettier": "2.0.5"
