--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -17,4 +17,5 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Resume", name: "resume", widget: "string"}
       - {label: "Link", name: "link", widget: "string"}
+      - {label: "Event", name: "event", widget: "string"}
       - {label: "Date", name: "date", widget: "datetime", format: "YYYY-MM-DD hh:mm:ss"}
