--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "gatsby": "^2.21.0",
     "gatsby-image": "^2.4.13",
+    "gatsby-plugin-manifest": "^2.4.18",
     "gatsby-plugin-netlify-cms": "^4.3.11",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^3.3.1",
